--- a/CheeseChaser/maps.qrc
+++ b/CheeseChaser/maps.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/staticmap">
         <file alias="static_map_1">res/static_map_1.txt</file>
         <file alias="static_map_2">res/static_map_2.txt</file>
+        <file>static_map_3</file>
     </qresource>
 </RCC>
